--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             dLogEl.innerHTML = "<br> <p>" + text + "</p>";   
         }
         
-        setInterval.addEventListener(10, update);
+        setInterval(update, 5);
     </script>
     </body>
     <!--JAVASCRIPT below! -->
