--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             }
         </style>
         
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+
     </head>
     <!--HTML below!-->
     <body>
@@ -91,7 +94,7 @@
         
         <script>
         //elements
-        var buttonEl    = document.getElementById("point-button");
+        var buttonEl    = $("#point-button");
         var displayEl   = document.getElementById("point-display");
         //update
         var dLogEl      = document.getElementById("update-log");
