--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             }
         </style>
         
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+        </script>
 
     </head>
     <!--HTML below!-->
