--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             }
         </style>
         
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
-        </script>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+</head>
 
     </head>
     <!--HTML below!-->
