--- a/index.html
+++ b/index.html
@@ -65,9 +65,6 @@
             }
         </style>
         
-<head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-</head>
 
     </head>
     <!--HTML below!-->
@@ -95,7 +92,7 @@
         
         <script>
         //elements
-        var buttonEl    = $("#point-button");
+        var buttonEl    = document.geetElementById("point-button");
         var displayEl   = document.getElementById("point-display");
         //update
         var dLogEl      = document.getElementById("update-log");
