--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 width:            15%;
                 height:           50px;
                 color:            black;
-                background-color: rgb(255, 228, 224);
+                background-color: rgb(237, 234, 228);
                 border:           solid 3px text;
                 font-family:      Georgia;
             }
 
             #point-display{
                 font-size:        70%;
-                color:            rgb(255, 242, 240);
+                color:            rgb(24, 24, 23);
                 text-align:       left;
                 position:         absolute;
                 top:              104px;
@@ -46,8 +46,8 @@
             #update-log{
                 font-size:        19px;
                 margin-top:       20px;
-                color:            rgb(229, 255, 240);
-                border:           solid 3px rgb(229, 255, 240);
+                color:            rgb(24, 24, 23);
+                border:           solid 3px text;
                 width:            438px;
                 margin-left:      auto;
                 margin-right:     auto;
@@ -57,7 +57,7 @@
             }
 
             #main-content{
-                border:           solid 3px rgb(255, 242, 240);
+                border:           solid 3px rgb(24, 24, 23);
                 margin-top:       100px;
                 width:            700px;
                 margin-left:      auto;
