--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style>
             /*CSS below!*/
             body {
-                background-color: rgb(237, 237, 227);
+                background-color: rgb(250, 250, 248);
                 color:            rgb(24, 24, 23);
                 font-size:        190%;
                 font-family:      Georgia;
@@ -19,7 +19,7 @@
                 width:            15%;
                 height:           50px;
                 color:            black;
-                background-color: rgb(237, 234, 228);
+                background-color: rgb(250, 250, 248);
                 border:           solid 3px text;
                 font-family:      Georgia;
             }
@@ -89,7 +89,7 @@
         <div id="point-display"></div>
 
             
-        
+     </body>
         <script>
         //elements
         var buttonEl    = document.geetElementById("point-button");
