geet is not a word

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
      </body>
         <script>
         //elements
-        var buttonEl    = document.geetElementById("point-button");
+        var buttonEl    = document.getElementById("point-button");
         var displayEl   = document.getElementById("point-display");
         //update
         var dLogEl      = document.getElementById("update-log");
