--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <style>
             /*CSS below!*/
             body {
-                background-color: rgb(250, 250, 248);
-                color:            rgb(24, 24, 23);
+                background-color: white;
+                color:            black;
                 font-size:        190%;
                 font-family:      Georgia;
                 text-align:       center;
@@ -47,7 +47,7 @@
                 font-size:        19px;
                 margin-top:       20px;
                 color:            rgb(24, 24, 23);
-                border:           solid 3px text;
+                border:           solid 3px black;
                 width:            438px;
                 margin-left:      auto;
                 margin-right:     auto;
@@ -143,7 +143,7 @@
                 
                 //style for new button
                 thinkButtonEl.style.color =           "black";
-                thinkButtonEl.style.backgroundColor = "rgb(255, 228, 224)";
+                thinkButtonEl.style.backgroundColor = "white";
                 thinkButtonEl.style.border =          "solid 3px text";
                 thinkButtonEl.style.fontFamily =      "Georgia";
                 thinkButtonEl.style.marginBottom =    "60px";
